Separate VM_BIND's Operation and Flag
- Add
_FLAG_
in defines in drm_xe_vm_create to be consistent with the rest - Check if there is a need in drm_xe_vm_bind_op for mixing op and flags instead of having:
__u16 op;
__u16 flags;
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
_FLAG_
in defines in drm_xe_vm_create to be consistent with the rest __u16 op;
__u16 flags;